gateone.js:  Added support for passing an array to `GateOne.i18n.gettext()` to make it more convenient to work with long strings (since JavaScript sucks and doesn't support proper multi-line strings). gateone.js:  Fixed a bug where you'd get a blank screen upon loading Gate One if you had just one visible application but multiple sub-applications. gateone.js:  The hard-coded 'text-align: center' in `GateOne.Visual.alert()` has been removed. gateone.js:  Removed the `before()` and `after()` stuff from `GateOne.Events`.  Nothing used it and it was unnecessary anyway (even though it was some cool JavaScript metaprogramming). gateone.js:  Since the only thing using the `__parent__` attribute was the aforementioned functions I have removed that part of `GateOne.Base.module()` and `GateOne.Base.update()`. Help Plugin:  This plugin is now using `GateOne.Base.SuperSandbox` to fix a bug where under certain circumstances it would load before `GateOne.Input` resulting in an exception. SSH Plugin:  ssh_connect.py:  Improved the handling of Ctrl-C and Ctrl-D (both are indications from the user they just want to quit ssh_connect.py). Convenience Plugin:  Fixed a bug where clicking on the permissions in the output of 'ls -l' wasn't working. Themes:  Added a new '✈centered_text' class which will be handy.  `GateOne.Visual.alert()` is already using it.

--- a/gateone/templates/themes/dark-black.css
+++ b/gateone/templates/themes/dark-black.css
@@ -34,6 +34,9 @@
     transform-origin: top right;
     transition: all 1s ease-in-out;
 }
+.✈centered_text {
+    text-align: center;
+}
 .✈workspace {
     color: #FFF;
     position: static;
